--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "travlr",
+  "name": "force",
   "version": "0.0.0",
-  "description": "Travlr Getaways",
-  "author": "Travlr",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -11,9 +9,15 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-handlebars": "^6.0.6",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "read-file": "^0.2.0"
+  },
+  "devDependencies": {
+    "hbs": "^4.2.0",
+    "seedgoose": "^2.0.2"
   }
 }
