--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "express-handlebars": "^6.0.6",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.9.1",
+    "mongoose": "^5.13.15",
     "morgan": "~1.9.1",
-    "read-file": "^0.2.0"
+    "read-file": "^0.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "hbs": "^4.2.0",
